--- a/src/Ace/CmsBundle/Resources/config/services.yml
+++ b/src/Ace/CmsBundle/Resources/config/services.yml
@@ -1,6 +1,7 @@
 imports:
     - { resource: Blog/controller.yml }
     - { resource: Event/controller.yml }
+    - { resource: Event/services.yml }
 
 services:
 
