--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -38,7 +38,7 @@ twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
     form_themes:
-        - 'bootstrap_3_horizontal_layout.html.twig'
+        - 'AceCommonBundle:Form:bootstrap_3_horizontal_layout.html.twig'
 
 # Assetic Configuration
 assetic:
