--- a/src/Ace/CmsBundle/Resources/config/Event/controller.yml
+++ b/src/Ace/CmsBundle/Resources/config/Event/controller.yml
@@ -13,7 +13,7 @@ services:
             - "@form.factory"
             - "@session"
             - "@common.repository.event"
-            - "@ace.cms.service.event.save"
+            - "@ace.cms.service.event.create_update"
         calls:
             - [setContainer, ["@service_container"]]
 
@@ -23,7 +23,7 @@ services:
             - "@form.factory"
             - "@session"
             - "@common.repository.event"
-            - "@ace.cms.service.event.save"
+            - "@ace.cms.service.event.create_update"
         calls:
             - [setContainer, ["@service_container"]]
 
